Added limits of Oleksandr ALEKS code

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+  <!-- Start of Олександр ALEKS code -->
+
 <!doctype html>
 <html lang="en">
 
@@ -43,6 +45,9 @@
       <a href="#contacts" class="header__banner-link button">Let's Sail!</a>
     </div>
   </header>
+
+  <!-- End of Олександр ALEKS code -->
+
   <main>
     <section class="sea">
       <h2 class="sea__h2">
