start of Khval code

--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
       </div>
     </section>
   </main>
+
+  <!--start Khval Andrii code-->
   <footer class="footer">
     <div class="footer__contacts">
       <h2 class="footer__contacts-h2">Contacts</h2>
@@ -77,6 +79,7 @@
     </div>
 
   </footer>
+  <!--End of Khval Andrii code-->
 </body>
 
 </html>
