Start of Main Collection Koval

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
     <!-- Start of Discount -->
     <!-- End of Discounr -->
 
-<!-- Start of Main Collection -->
-<!-- End of Main Collection -->
+<!-- Start of Main Collection Koval -->
+<!-- End of Main Collection Koval-->
 
 <!-- Start of Deal of the month -->
 <!-- End of Deal of the month -->
