--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
     </section>
 <!-- End of WhyChoseUs+AboutUs -->
 
-<!-- Start of MidSeasonSale -->
-<!-- End of MidSeasonSale -->
+<!-- Start of MidSeasonSale Olga Bondarenko-->
+<!-- End of MidSeasonSale Olga Bondarenko-->
 
     <!-- Start of Discount -->
     <!-- End of Discounr -->
