updated cod html

--- a/index.html
+++ b/index.html
@@ -94,12 +94,68 @@
 						</ul>
 					</div>
 					<div class="shop__items">
-						<div class="shop__item card">
-							<img src="img/main-collection/men_bool.jpg" alt="">
-							<a href="" class="card__text">Adidas Compression Tee</a>
-							<div class="card__price">$33,00</div>
-							<a href="" class="card__link">Add to Cart</a>
+						<div class="shop__item-women ">
+							<div class="card">
+								<a class="card__img" href=""><img src="img/main-collection/women1.jpg" alt=""></a>
+								<a href="" class="card__text">Adidas Compression Tee</a>
+								<div class="card__price">$33,00</div>
+								<a href="" class="card__link">Add to Cart</a>
+							</div>
+							<div class="card">
+								<a class="card__img" href=""><img src="img/main-collection/women2.jpg" alt=""></a>
+								<a href="" class="card__text">Adidas Compression Tee</a>
+								<div class="card__price">$33,00</div>
+								<a href="" class="card__link">Add to Cart</a>
+							</div>
+							<div class="card">
+								<a class="card__img" href=""><img src="img/main-collection/women3.jpg" alt=""></a>
+								<a href="" class="card__text">Adidas Compression Tee</a>
+								<div class="card__price">$33,00</div>
+								<a href="" class="card__link">Add to Cart</a>
+							</div>
 						</div>
+						<!--
+						<div class="shop__item-men ">
+							<div class="card">
+								<a class="card__img" href=""><img src="img/main-collection/men1.jpg" alt=""></a>
+								<a href="" class="card__text">Adidas Compression Tee</a>
+								<div class="card__price">$33,00</div>
+								<a href="" class="card__link">Add to Cart</a>
+							</div>
+							<div class="card">
+								<a class="card__img" href=""><img src="img/main-collection/men2.jpg" alt=""></a>
+								<a href="" class="card__text">Adidas Compression Tee</a>
+								<div class="card__price">$33,00</div>
+								<a href="" class="card__link">Add to Cart</a>
+							</div>
+							<div class="card">
+								<a class="card__img" href=""><img src="img/main-collection/men3.jpg" alt=""></a>
+								<a href="" class="card__text">Adidas Compression Tee</a>
+								<div class="card__price">$33,00</div>
+								<a href="" class="card__link">Add to Cart</a>
+							</div>
+						</div>
+
+						<div class="shop__item-shoes">
+							<div class="card">
+								<a class="card__img" href=""><img src="img/main-collection/shoes1.jpg" alt=""></a>
+								<a href="" class="card__text">Adidas Compression Tee</a>
+								<div class="card__price">$33,00</div>
+								<a href="" class="card__link">Add to Cart</a>
+							</div>
+							<div class="card">
+								<a class="card__img" href=""><img src="img/main-collection/shoes2.jpg" alt=""></a>
+								<a href="" class="card__text">Adidas Compression Tee</a>
+								<div class="card__price">$33,00</div>
+								<a href="" class="card__link">Add to Cart</a>
+							</div>
+							<div class="card">
+								<a class="card__img" href=""><img src="img/main-collection/shoes3.jpg" alt=""></a>
+								<a href="" class="card__text">Adidas Compression Tee</a>
+								<div class="card__price">$33,00</div>
+								<a href="" class="card__link">Add to Cart</a>
+							</div>
+						</div>-->
 					</div>
 				</div>
 			</div>
