--- a/index.html
+++ b/index.html
@@ -6,14 +6,29 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Hello World</title>
+	<title>Sport Clothes Store</title>
 	<script src="https://kit.fontawesome.com/5619db74ed.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
 	<header class="header">
-		<nav class="header__contacts">
-			<a href="tel:12345678900">1-234-567-8900</a>
+		<section class="header__contacts" style="background-color: #d60307">
+			<div><P>We’ve extended our returns period to 30 days.</P></div>
+			<div><a href="mailto:workout@email.com">workout@email.com</a></div>
+			<div><a href="tel:12345678900">1-234-567-8900</a></div>
+		</section>
+		<nav class="header__menu" style="background-color: #222323">
+			<img class="header__logo" width="168" src="img/logo.svg" alt="Shop Logo">
+			<div class="header__top-navigation-links">
+				<a class="link" href="destinations.html">Destinations</a>
+				<a class="link" href="services.html">Services</a>
+				<a class="link" href="our-fleet.html">Our fleet</a>
+				<a class="link" href="gallery.html">Gallery</a>
+				<a class="link" href="faq.html">FAQ</a>
+				<a class="link" href="about-us.html">About Us</a>
+				<a class="link" href="contacts.html">Contacts</a>
+				<a class="link button" href="contacts.html">Send request</a>
+			</div>
 			<div>
 				<a href="https://twitter.com">
 					<i class="fa-brands fa-twitter"></i>
@@ -24,19 +39,6 @@
 				<a href="https://instagram.com">
 					<i class="fa-brands fa-instagram"></i>
 				</a>
-			</div>
-		</nav>
-		<nav class="header__top-navigation" style="background-color: #515c6d">
-			<img class="header__top-navigation-logo" width="176" src="img/yacht-logo.svg" alt="Yacht Logo">
-			<div class="header__top-navigation-links">
-				<a class="link" href="destinations.html">Destinations</a>
-				<a class="link" href="services.html">Services</a>
-				<a class="link" href="our-fleet.html">Our fleet</a>
-				<a class="link" href="gallery.html">Gallery</a>
-				<a class="link" href="faq.html">FAQ</a>
-				<a class="link" href="about-us.html">About Us</a>
-				<a class="link" href="contacts.html">Contacts</a>
-				<a class="link button" href="contacts.html">Send request</a>
 			</div>
 		</nav>
 		<div class="header__banner">
