Header HTML part completed

--- a/index.html
+++ b/index.html
@@ -38,9 +38,15 @@
 				</a>				
 			</div>
 		</nav>
-		<div class="header__niger" style="background-image: img/niger.webp;">
+		<div class="header__niger" style="background-image: url('img/niger.webp')">
+			<br>
+			<br>
+			<br>
 			<h2 class="header__aspire">ASPIRE TO MORE</h2>
 			<h1 class="header__new">new collections by top brands.</h1>
+			<br>
+			<br>
+			<br>
 			<a href="#collection" class="header__link button">Shop Now ⮕</a>
 		</div>
 	</header>
