--- a/index.html
+++ b/index.html
@@ -6,53 +6,49 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Sport Clothes Store</title>
-	<script src="https://kit.fontawesome.com/5572bfa699.js" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="css/main.css">
+	<title>Hello World</title>
+	<script src="https://kit.fontawesome.com/5619db74ed.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
 	<header class="header">
-		<section class="header__contacts" style="background-color: #d60307">
-			<div><P>We’ve extended our returns period to 30 days.</P></div>
-			<div><a href="mailto:workout@email.com">workout@email.com</a></div>
-			<div><a href="tel:12345678900">1-234-567-8900</a></div>
-		</section>
-		<nav class="header__menu" style="background-color: #222323">
-			<img class="header__logo" width="168" src="img/logo.svg" alt="Shop Logo">
-			<div class="header__links">
-				<a class="link" href="#about">About us.</a>
-				<a class="link" href="#sale">Sale.</a>
-				<a class="link" href="#collection">Collection.</a>
-				<a class="link" href="blog.html">Blog.</a>
-				<a class="link" href="contacts.html">Contact us.</a>
-			</div>
+		<nav class="header__contacts">
+			<a href="tel:12345678900">1-234-567-8900</a>
 			<div>
+				<a href="https://twitter.com">
+					<i class="fa-brands fa-twitter"></i>
+				</a>
 				<a href="https://facebook.com">
-					<i class="fa-brands fa-facebook-square"></i>
+					<i class="fa-brands fa-facebook"></i>
 				</a>
 				<a href="https://instagram.com">
-					<i class="fa-brands fa-instagram-square"></i>
+					<i class="fa-brands fa-instagram"></i>
 				</a>
-				<a href="https://youtube.com">
-					<i class="fa-brands fa-youtube-square"></i>
-				</a>				
 			</div>
 		</nav>
-		<div class="header__niger" style="background-image: url('img/niger.webp')">
-			<br>
-			<br>
-			<br>
-			<h2 class="header__aspire">ASPIRE TO MORE</h2>
-			<h1 class="header__new">new collections by top brands.</h1>
-			<br>
-			<br>
-			<br>
-			<a href="#collection" class="header__link button">Shop Now ⮕</a>
+		<nav class="header__top-navigation" style="background-color: #515c6d">
+			<img class="header__top-navigation-logo" width="176" src="img/yacht-logo.svg" alt="Yacht Logo">
+			<div class="header__top-navigation-links">
+				<a class="link" href="destinations.html">Destinations</a>
+				<a class="link" href="services.html">Services</a>
+				<a class="link" href="our-fleet.html">Our fleet</a>
+				<a class="link" href="gallery.html">Gallery</a>
+				<a class="link" href="faq.html">FAQ</a>
+				<a class="link" href="about-us.html">About Us</a>
+				<a class="link" href="contacts.html">Contacts</a>
+				<a class="link button" href="contacts.html">Send request</a>
+			</div>
+		</nav>
+		<div class="header__banner">
+			<h1 class="header__banner-h1">YachtSail Trips</h1>
+			<p class="subheader">Join us on maritime vacation in the most spectacular places of the world!</p>
+			<a href="#contacts" class="header__banner-link button">Let's Sail!</a>
 		</div>
 	</header>
 
 	<!-- End of Олександр ALEKS code -->
-	<HR>
+
 	<main>
 
 		<!-- Start of WhyChoseUs+AboutUs -->
@@ -73,15 +69,15 @@
 			</div>
 		</section>
 		<!-- End of WhyChoseUs+AboutUs -->
-<HR>
-<!-- Start of MidSeasonSale Olga Bondarenko-->
-<!-- End of MidSeasonSale Olga Bondarenko-->
+
+		<!-- Start of MidSeasonSale Olga Bondarenko-->
+		<!-- End of MidSeasonSale Olga Bondarenko-->
 
 		<!-- Start of Discount -->
 		<!-- End of Discounr -->
 
 		<!-- Start of Main Collection Koval -->
-		<section class="main-collection" style="border: 2px solid red;">
+		<section id="#collection" class="main-collection">
 			<div class="main-collection__about __conteiner ">
 				<div class="main-collection__title text">
 					<h2 class="text__title">main COLLECTION.</h2>
@@ -97,7 +93,7 @@
 						</ul>
 					</div>
 					<div class="shop__items">
-						<div class="shop__item-women ">
+						<div class="shop__item-women">
 							<div class="card">
 								<a class="card__img" href=""><img src="img/main-collection/women1.jpg" alt=""></a>
 								<a href="" class="card__text">Adidas Compression Tee</a>
@@ -117,8 +113,8 @@
 								<a href="" class="card__link">Add to Cart</a>
 							</div>
 						</div>
-						<!--
-						<div class="shop__item-men ">
+
+						<!--<div class="shop__item-men ">
 							<div class="card">
 								<a class="card__img" href=""><img src="img/main-collection/men1.jpg" alt=""></a>
 								<a href="" class="card__text">Adidas Compression Tee</a>
