--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="css/main.css">
 	<title>Sport Clothes Store</title>
 	<script src="https://kit.fontawesome.com/5572bfa699.js" crossorigin="anonymous"></script>
 </head>
@@ -13,7 +14,9 @@
 <body>
 	<header class="header">
 		<section class="header__contacts" style="background-color: #d60307">
-			<div><P>We’ve extended our returns period to 30 days.</P></div>
+			<div>
+				<P>We’ve extended our returns period to 30 days.</P>
+			</div>
 			<div><a href="mailto:workout@email.com">workout@email.com</a></div>
 			<div><a href="tel:12345678900">1-234-567-8900</a></div>
 		</section>
@@ -35,7 +38,7 @@
 				</a>
 				<a href="https://youtube.com">
 					<i class="fa-brands fa-youtube-square"></i>
-				</a>				
+				</a>
 			</div>
 		</nav>
 		<div class="header__niger" style="background-image: url('img/niger.webp')">
@@ -101,20 +104,20 @@
 						<div class="shop__item-women">
 							<div class="card">
 								<a class="card__img" href=""><img src="img/main-collection/women1.jpg" alt=""></a>
-								<a href="" class="card__text">Adidas Compression Tee</a>
-								<div class="card__price">$33,00</div>
+								<a href="" class="card__text">Puma Sports Bra</a>
+								<div class="card__price">$12,00</div>
 								<a href="" class="card__link">Add to Cart</a>
 							</div>
 							<div class="card">
 								<a class="card__img" href=""><img src="img/main-collection/women2.jpg" alt=""></a>
-								<a href="" class="card__text">Adidas Compression Tee</a>
-								<div class="card__price">$33,00</div>
+								<a href="" class="card__text">Reebok Long Sleeve Top</a>
+								<div class="card__price">$18,00</div>
 								<a href="" class="card__link">Add to Cart</a>
 							</div>
 							<div class="card">
 								<a class="card__img" href=""><img src="img/main-collection/women3.jpg" alt=""></a>
-								<a href="" class="card__text">Adidas Compression Tee</a>
-								<div class="card__price">$33,00</div>
+								<a href="" class="card__text">Quicksilver Workout Top</a>
+								<div class="card__price">$12,00</div>
 								<a href="" class="card__link">Add to Cart</a>
 							</div>
 						</div>
