second footer commit

--- a/index.html
+++ b/index.html
@@ -91,18 +91,29 @@
 
   <footer class="footer">
     <section class="footer__container">
+
+      <!--first section of footer comntainer-->
       <div class="footer__container__top">
-        
-        <!--first section of footer comntainer-->
         <div class="container__top__inside">
-          <div class="container__top__inside__empty">
+          <div class="container__top__inside__empty"><!--empty div-->
           </div>
-          <div class="container__top__inside__first-order"> 
+          <div class="container__top__inside__first-order"><!--first order div-->
+            <div class="first-order__inside">
+              <div class="first-order__inside__logo">
+                <i class="fa-solid fa-envelope-open-text"></i>    
+              </div>
+              <div class="first-order__inside__text">
+                <span>10%</span>
+                <span>OFF YOUR FIRST ORDER. SIGN UP TO OUR NEWSLETTER TO GET THIS SPECIAL OFFER.</span>
+              </div>
+            </div>
           </div>
-          <div class="container__top__inside__form">
+          <div class="container__top__inside__form"><!--form div-->
           </div>
         </div>
       </div>
+
+      <!--second section of footer comntainer-->
       <div>
         <div class="footer__container__nav">
           <form action="">
@@ -111,6 +122,8 @@
           </form>
         </div>
       </div>
+
+      <!--third section of footer comntainer-->
       <div>
 
       </div>
