About us taken by Oleksandr Aleks

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<br>
 			<br>
 			<br>
-			<h2 class="header__aspire">ASPIRE TO MORE</h2>
+			<h4 class="header__aspire">ASPIRE TO MORE</h4>
 			<h1 class="header__new">new collections by top brands.</h1>
 			<br>
 			<br>
@@ -59,7 +59,7 @@
 
 	<main>
 
-		<!-- Start of WhyChoseUs+AboutUs -->
+		<!-- Start of WhyChoseUs -->
 
 		<section class="sea">
 			<h2 class="sea__h2">
@@ -76,7 +76,11 @@
 				</article>
 			</div>
 		</section>
-		<!-- End of WhyChoseUs+AboutUs -->
+		<!-- End of WhyChoseUs -->
+
+		<!-- Start of AboutUs Олександр ALEKS code -->
+
+		<!-- End of AboutUs Олександр ALEKS code -->
 
 		<!-- Start of MidSeasonSale Olga Bondarenko-->
 		<!-- End of MidSeasonSale Olga Bondarenko-->
