About us completed

--- a/index.html
+++ b/index.html
@@ -30,15 +30,9 @@
 				<a class="link" href="contacts.html">Contact us.</a>
 			</div>
 			<div>
-				<a href="https://facebook.com">
-					<i class="fa-brands fa-facebook-square"></i>
-				</a>
-				<a href="https://instagram.com">
-					<i class="fa-brands fa-instagram-square"></i>
-				</a>
-				<a href="https://youtube.com">
-					<i class="fa-brands fa-youtube-square"></i>
-				</a>
+				<a href="https://facebook.com"><img src="img/facebook.svg" width="31" style="background-color: #FFFFFF"></a>
+				<a href="https://instagram.com"><img src="img/instagram.svg" width="31" style="background-color: #FFFFFF"></a>
+				<a href="https://youtube.com"><img src="img/youtube.svg" width="31" style="background-color: #FFFFFF"></a>
 			</div>
 		</nav>
 		<div class="header__niger" style="background-image: url('img/niger.webp')">
@@ -77,11 +71,25 @@
 			</div>
 		</section>
 		<!-- End of WhyChoseUs -->
-
+		<HR>
 		<!-- Start of AboutUs Олександр ALEKS code -->
-
+	<section id="about" class="about">
+		<div class="about__side"><img src="img/men.jpg" alt="Men aside" width="50%"></div>
+		<div class="about__description" style="background-color: #000000">
+			<H2 style="color: #FFFFFF;">About us.</H2>
+			<hr width="20%" align="left" color="#FF0000">
+			<H5 style="color: #FFFFFF;">Workout is an American fitness store created by fitness geeks for those who love sport and try to keep fit.</H5>
+			<P style="color: #FFFFFF;">At Workout, we know that great results do not come from standing still. We all need to move, push boundaries, and achieve better results every day. The mission of our shop is to support you in this.</P>
+			<P style="color: #FFFFFF;">We're sure that everyday fitness can change your lives and bodies forever. And we keep selling comfortable and high-tech clothes and shoes for your outstanding results.</P>
+			<div>
+				<a href="https://facebook.com"><img src="img/facebook.svg" width="31" style="background-color: #d60307"></a>
+				<a href="https://instagram.com"><img src="img/instagram.svg" width="31" style="background-color: #d60307"></a>
+				<a href="https://youtube.com"><img src="img/youtube.svg" width="31" style="background-color: #d60307"></a>
+			</div>
+		</div>
+	</section>
 		<!-- End of AboutUs Олександр ALEKS code -->
-
+		<HR>
 		<!-- Start of MidSeasonSale Olga Bondarenko-->
 		<!-- End of MidSeasonSale Olga Bondarenko-->
 
@@ -89,7 +97,7 @@
 		<!-- End of Discounr -->
 
 		<!-- Start of Main Collection Koval -->
-		<section id="#collection" class="main-collection">
+		<section id="collection" class="main-collection">
 			<div class="main-collection__about __conteiner ">
 				<div class="main-collection__title text">
 					<h2 class="text__title">main COLLECTION.</h2>
