completed second footer section

--- a/index.html
+++ b/index.html
@@ -211,16 +211,62 @@
 
       <!--second section of footer comntainer-->
       <div>
-        <div class="footer__container__nav">
-          <form action="">
-            <input name="" type="text" placeholder="Name*" required>
-            <input type="submit" value="Send a request">
-          </form>
+        <div class="footer__logo">
+          <div class="footer__logo__container">
+            <img src="img/logo.svg" alt="LOGO">
+          </div>
+          <div class="footer__logo__text">
+            <p>
+              Workout offers fitness clothing and footwear for those who want to change their lives and bodies for better. 
+            </p>
+          </div>
         </div>
+        <div class="footer__navigation">
+          <span class="footer__navigation__title">
+            NAVIGATION
+          </span>
+          <div class="navigation__line"></div>
+          <div>
+            <a class="footer__navigation__links" href="#about">About us.</a>
+            <a class="footer__navigation__links" href="#collection">Collection.</a>
+            <a class="footer__navigation__links" href="#blog.html">Blog.</a>
+            <a class="footer__navigation__links" href="#contacts.html">Contacts.</a>
+          </div>
+        </div>
+        <nav class="footer__shop__container">
+          <span class="footer__navigation__title">
+            SHOP
+          </span>
+          <div class="shop__line"></div>
+          <div>
+            <a class="footer__shop__links" href="#woman">Woman.</a>
+            <a class="footer__shop__links" href="#man">Man.</a>
+            <a class="footer__shop__links" href="#shoes">Shoes.</a>
+            <a class="footer__shop__links" href="#sale">Sale.</a>
+          </div>
+        </nav>
+        <nav class="footer__follow-us">
+          <span class="footer__navigation__title">
+            FOLLOW US
+          </span>
+          <div class="follow-us__line"></div>
+          <div class="footer__follow-us__link">
+            <a href="https://facebook.com">
+              <i class="fa-brands fa-facebook-square"></i>
+            </a>
+            <a href="https://instagram.com">
+              <i class="fa-brands fa-instagram-square"></i>
+            </a>
+            <a href="https://youtube.com">
+              <i class="fa-brands fa-youtube-square"></i>
+            </a>
+          </div>
+        </nav>
       </div>
 
       <!--third section of footer comntainer-->
       <div>
+        
 
       </div>
     </section>
