completed third footer section

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
       </div>
 
       <!--second section of footer comntainer-->
-      <div>
+      <div class="footer__container__middle">
         <div class="footer__logo">
           <div class="footer__logo__container">
             <img src="img/logo.svg" alt="LOGO">
@@ -273,9 +273,13 @@
       </div>
 
       <!--third section of footer comntainer-->
-      <div>
-        
-
+      <div class="footer__container__bottom">
+        <p class="footer__container__bottom__text">
+          © Created by
+        </p>
+        <p class="footer__container__bottom__text">
+          All rights Reserved
+        </p>
       </div>
     </section>
 	</footer>
