--- a/index.html
+++ b/index.html
@@ -4,168 +4,78 @@
 <html lang="en">
 
 <head>
-  <<<<<<< HEAD <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sport Clothes Store</title>
-    <script src="https://kit.fontawesome.com/5619db74ed.js" crossorigin="anonymous"></script>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="css/main.css">
+	<title>Sport Clothes Store</title>
+	<script src="https://kit.fontawesome.com/5572bfa699.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <header class="header">
-    <section class="header__contacts" style="background-color: #d60307">
-      <div>
-        <P>We’ve extended our returns period to 30 days.</P>
-      </div>
-      <div><a href="mailto:workout@email.com">workout@email.com</a></div>
-      <div><a href="tel:12345678900">1-234-567-8900</a></div>
-    </section>
-    <nav class="header__menu" style="background-color: #222323">
-      <img class="header__logo" width="168" src="img/logo.svg" alt="Shop Logo">
-      <div class="header__top-navigation-links">
-        <a class="link" href="destinations.html">Destinations</a>
-        <a class="link" href="services.html">Services</a>
-        <a class="link" href="our-fleet.html">Our fleet</a>
-        <a class="link" href="gallery.html">Gallery</a>
-        <a class="link" href="faq.html">FAQ</a>
-        <a class="link" href="about-us.html">About Us</a>
-        <a class="link" href="contacts.html">Contacts</a>
-        <a class="link button" href="contacts.html">Send request</a>
-      </div>
-      <div>
-        <a href="https://twitter.com">
-          <i class="fa-brands fa-twitter"></i>
-        </a>
-        <a href="https://facebook.com">
-          <i class="fa-brands fa-facebook"></i>
-        </a>
-        <a href="https://instagram.com">
-          <i class="fa-brands fa-instagram"></i>
-        </a>
-      </div>
-    </nav>
-    <div class="header__banner">
-      <h1 class="header__banner-h1">YachtSail Trips</h1>
-      <p class="subheader">Join us on maritime vacation in the most spectacular places of the world!</p>
-      <a href="#contacts" class="header__banner-link button">Let's Sail!</a>
-    </div>
-  </header>
+	<header class="header">
+		<section class="header__contacts" style="background-color: #d60307">
+			<div>
+				<P>We’ve extended our returns period to 30 days.</P>
+			</div>
+			<div><a href="mailto:workout@email.com">workout@email.com</a></div>
+			<div><a href="tel:12345678900">1-234-567-8900</a></div>
+		</section>
+		<nav class="header__menu" style="background-color: #222323">
+			<img class="header__logo" width="168" src="img/logo.svg" alt="Shop Logo">
+			<div class="header__links">
+				<a class="link" href="#about">About us.</a>
+				<a class="link" href="#sale">Sale.</a>
+				<a class="link" href="#collection">Collection.</a>
+				<a class="link" href="blog.html">Blog.</a>
+				<a class="link" href="contacts.html">Contact us.</a>
+			</div>
+			<div>
+				<a href="https://facebook.com"><img src="img/facebook.svg" width="31" style="background-color: #FFFFFF"></a>
+				<a href="https://instagram.com"><img src="img/instagram.svg" width="31" style="background-color: #FFFFFF"></a>
+				<a href="https://youtube.com"><img src="img/youtube.svg" width="31" style="background-color: #FFFFFF"></a>
+			</div>
+		</nav>
+		<div class="header__niger" style="background-image: url('img/niger.webp')">
+			<br>
+			<br>
+			<br>
+			<h4 class="header__aspire">ASPIRE TO MORE</h4>
+			<h1 class="header__new">new collections by top brands.</h1>
+			<br>
+			<br>
+			<br>
+			<a href="#collection" class="header__link button">Shop Now ⮕</a>
+		</div>
+	</header>
 
-  <!-- End of Олександр ALEKS code -->
-  =======
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/main.css">
-  <title>Sport Clothes Store</title>
-  <script src="https://kit.fontawesome.com/5572bfa699.js" crossorigin="anonymous"></script>
-  </head>
+	<!-- End of Олександр ALEKS code -->
+	<HR>
 
-  <body>
-    <header class="header">
-      <section class="header__contacts" style="background-color: #d60307">
-        <div>
-          <P>We’ve extended our returns period to 30 days.</P>
-        </div>
-        <div><a href="mailto:workout@email.com">workout@email.com</a></div>
-        <div><a href="tel:12345678900">1-234-567-8900</a></div>
-      </section>
-      <nav class="header__menu" style="background-color: #222323">
-        <img class="header__logo" width="168" src="img/logo.svg" alt="Shop Logo">
-        <div class="header__links">
-          <a class="link" href="#about">About us.</a>
-          <a class="link" href="#sale">Sale.</a>
-          <a class="link" href="#collection">Collection.</a>
-          <a class="link" href="blog.html">Blog.</a>
-          <a class="link" href="contacts.html">Contact us.</a>
-        </div>
-        <div>
-          <a href="https://facebook.com"><img src="img/facebook.svg" width="31" style="background-color: #FFFFFF"></a>
-          <a href="https://instagram.com"><img src="img/instagram.svg" width="31" style="background-color: #FFFFFF"></a>
-          <a href="https://youtube.com"><img src="img/youtube.svg" width="31" style="background-color: #FFFFFF"></a>
-        </div>
-      </nav>
-      <div class="header__niger" style="background-image: url('img/niger.webp')">
-        <br>
-        <br>
-        <br>
-        <h4 class="header__aspire">ASPIRE TO MORE</h4>
-        <h1 class="header__new">new collections by top brands.</h1>
-        <br>
-        <br>
-        <br>
-        <a href="#collection" class="header__link button">Shop Now ⮕</a>
-      </div>
-    </header>
+	<main>
 
-    <!-- End of Олександр ALEKS code -->
+		<!-- Start of WhyChoseUs -->
+    ..... Why Chose Us block must be here .....
+    <!-- End of WhyChoseUs -->
+
     <HR>
-    >>>>>>> 600fe46a6fa2cc11167189e2df4d421bcf691077
-
-    <main>
-
-      <<<<<<< HEAD <!-- Start of WhyChoseUs+AboutUs -->
-
-        <section class="sea">
-          <h2 class="sea__h2">
-            Sea the World
-          </h2>
-          <p class="sea__subheader">
-            Join our yacht trips to the most outstanding places of the world
-          </p>
-          <div class="sea__locations">
-            <article class="location">
-              <img class="location__image" src="img/location-sea.jpg" "Sea">
-              <h3 class="location__h3">Affable Croatian Isles</h3>
-              <div class="location__months">JUN | JUL | AUG | SEP</div>
-            </article>
-          </div>
-        </section>
-        <!-- End of WhyChoseUs+AboutUs -->
-
-        <!-- Start of MidSeasonSale Olga Bondarenko-->
-        <!-- End of MidSeasonSale Olga Bondarenko-->
-        =======
-        <!-- Start of WhyChoseUs -->
-
-        <section class="sea">
-          <h2 class="sea__h2">
-            Sea the World
-          </h2>
-          <p class="sea__subheader">
-            Join our yacht trips to the most outstanding places of the world
-          </p>
-          <div class="sea__locations">
-            <article class="location">
-              <img class="location__image" src="img/location-sea.jpg" "Sea">
-              <h3 class="location__h3">Affable Croatian Isles</h3>
-              <div class="location__months">JUN | JUL | AUG | SEP</div>
-            </article>
-          </div>
-        </section>
-        <!-- End of WhyChoseUs -->
-        <HR>
-        <!-- Start of AboutUs Олександр ALEKS code -->
-        <section id="about" class="about">
-          <div class="about__side"><img src="img/men.jpg" alt="Men aside" width="50%"></div>
-          <div class="about__description" style="background-color: #000000">
-            <H2 style="color: #FFFFFF;">About us.</H2>
-            <hr width="20%" align="left" color="#FF0000">
-            <H5 style="color: #FFFFFF;">Workout is an American fitness store created by fitness geeks for those who love
-              sport and try to keep fit.</H5>
-            <P style="color: #FFFFFF;">At Workout, we know that great results do not come from standing still. We all
-              need to move, push boundaries, and achieve better results every day. The mission of our shop is to support
-              you in this.</P>
-            <P style="color: #FFFFFF;">We're sure that everyday fitness can change your lives and bodies forever. And we
-              keep selling comfortable and high-tech clothes and shoes for your outstanding results.</P>
-            <div>
-              <a href="https://facebook.com"><img src="img/facebook.svg" width="31"
-                  style="background-color: #d60307"></a>
-              <a href="https://instagram.com"><img src="img/instagram.svg" width="31"
-                  style="background-color: #d60307"></a>
-              <a href="https://youtube.com"><img src="img/youtube.svg" width="31" style="background-color: #d60307"></a>
-            </div>
-          </div>
-        </section>
-        <!-- End of AboutUs Олександр ALEKS code -->
+		<!-- Start of AboutUs Олександр ALEKS code -->
+	<section id="about" class="about">
+		<div class="about__side"><img src="img/men.jpg" alt="Men aside" width="50%"></div>
+		<div class="about__description" style="background-color: #000000">
+			<H2 style="color: #FFFFFF;">About us.</H2>
+			<hr width="20%" align="left" color="#FF0000">
+			<H5 style="color: #FFFFFF;">Workout is an American fitness store created by fitness geeks for those who love sport and try to keep fit.</H5>
+			<P style="color: #FFFFFF;">At Workout, we know that great results do not come from standing still. We all need to move, push boundaries, and achieve better results every day. The mission of our shop is to support you in this.</P>
+			<P style="color: #FFFFFF;">We're sure that everyday fitness can change your lives and bodies forever. And we keep selling comfortable and high-tech clothes and shoes for your outstanding results.</P>
+			<div>
+				<a href="https://facebook.com"><img src="img/facebook.svg" width="31" style="background-color: #d60307"></a>
+				<a href="https://instagram.com"><img src="img/instagram.svg" width="31" style="background-color: #d60307"></a>
+				<a href="https://youtube.com"><img src="img/youtube.svg" width="31" style="background-color: #d60307"></a>
+			</div>
+		</div>
+	</section>
+		<!-- End of AboutUs Олександр ALEKS code -->
+	
         <HR>
         <!-- Start of MidSeasonSale Olga Bondarenko-->
         <section class="sale">
