--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                   best buying experience!
               </p>
               <div class="sale__cards">
-                  <article class="card">
+                  <article class="sale__card">
                       <a href="trainers.html">
                           <img class="card__img" style="width: 283px" src="img/mid-season-sale/sale-trainers.png" alt="trainers">
                       </a>
@@ -95,7 +95,7 @@
                       <span class="card__price">$60,00</span>
                       <input type="submit" value="Add to Cart">
                   </article>
-                  <article class="card">
+                  <article class="sale__card">
                       <a href="shorts.html">
                           <img class="card__img" style="width: 283px" src="img/mid-season-sale/sale-shorts.png" alt="shorts">
                       </a>
@@ -103,7 +103,7 @@
                       <span class="card__price">$60,00</span>
                       <input type="submit" value="Add to Cart">
                   </article>
-                  <article class="card">
+                  <article class="sale__card">
                       <a href="shoes.html">
                           <img class="card__img" style="width: 283px" src="img/mid-season-sale/sale-shoes.png" alt="shoes">
                       </a>
@@ -111,7 +111,7 @@
                       <span class="card__price">$60,00</span>
                       <input type="submit" value="Add to Cart">
                   </article>
-                  <article class="card card__media1">
+                  <article class="sale__card card__media1">
                       <a href="top.html">
                           <img class="card__img" style="width: 283px" src="img/mid-season-sale/sale-top.png" alt="top">
                       </a>
@@ -119,7 +119,7 @@
                       <span class="card__price">$60,00</span>
                       <input type="submit" value="Add to Cart">
                   </article>
-                  <article class="card card__media1 card__media2">
+                  <article class="sale__card card__media1 card__media2">
                       <a href="t-shirt.html">
                           <img class="card__img" style="width: 283px" src="img/mid-season-sale/sale-t-shirt.png" alt="t-shirt">
                       </a>
