Corrections after validator

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<header class="header">
 		<section class="header__contacts" style="background-color: #d60307">
 			<div>
-				<P>We’ve extended our returns period to 30 days.</P>
+				<H6>We’ve extended our returns period to 30 days.</H6>
 			</div>
 			<div><a href="mailto:workout@email.com">workout@email.com</a></div>
 			<div><a href="tel:12345678900">1-234-567-8900</a></div>
@@ -30,9 +30,9 @@
 				<a class="link" href="contacts.html">Contact us.</a>
 			</div>
 			<div>
-				<a href="https://facebook.com"><img src="img/facebook.svg" width="31" style="background-color: #FFFFFF"></a>
-				<a href="https://instagram.com"><img src="img/instagram.svg" width="31" style="background-color: #FFFFFF"></a>
-				<a href="https://youtube.com"><img src="img/youtube.svg" width="31" style="background-color: #FFFFFF"></a>
+				<a href="https://facebook.com"><img src="img/facebook.svg" width="31" style="background-color: #FFFFFF" alt="Face Book"></a>
+				<a href="https://instagram.com"><img src="img/instagram.svg" width="31" style="background-color: #FFFFFF" alt="Instagram"></a>
+				<a href="https://youtube.com"><img src="img/youtube.svg" width="31" style="background-color: #FFFFFF" alt="Youtube"></a>
 			</div>
 		</nav>
 		<div class="header__niger" style="background-image: url('img/niger.webp')">
@@ -68,9 +68,9 @@
 			<P style="color: #FFFFFF;">At Workout, we know that great results do not come from standing still. We all need to move, push boundaries, and achieve better results every day. The mission of our shop is to support you in this.</P>
 			<P style="color: #FFFFFF;">We're sure that everyday fitness can change your lives and bodies forever. And we keep selling comfortable and high-tech clothes and shoes for your outstanding results.</P>
 			<div>
-				<a href="https://facebook.com"><img src="img/facebook.svg" width="31" style="background-color: #d60307"></a>
-				<a href="https://instagram.com"><img src="img/instagram.svg" width="31" style="background-color: #d60307"></a>
-				<a href="https://youtube.com"><img src="img/youtube.svg" width="31" style="background-color: #d60307"></a>
+				<a href="https://facebook.com"><img src="img/facebook.svg" width="31" style="background-color: #d60307" alt="Face Book"></a>
+				<a href="https://instagram.com"><img src="img/instagram.svg" width="31" style="background-color: #d60307" alt="Instagram"></a>
+				<a href="https://youtube.com"><img src="img/youtube.svg" width="31" style="background-color: #d60307" alt="Youtube"></a>
 			</div>
 		</div>
 	</section>
