--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
                       <a href="trainers.html">
                           <img class="card__img" style="width: 283px" src="img/mid-season-sale/sale-trainers.png" alt="trainers">
                       </a>
-                      <a href="trainers.html" class="card__link">Adidas Cloudfoam Trainers</a>
+                      <a href="trainers.html" class="card__link">
+                        <h6>Adidas Cloudfoam Trainers</h6>
+                        </a>
                       <span class="card__price">$60,00</span>
                       <input type="submit" value="Add to Cart">
                   </article>
@@ -99,15 +101,19 @@
                       <a href="shorts.html">
                           <img class="card__img" style="width: 283px" src="img/mid-season-sale/sale-shorts.png" alt="shorts">
                       </a>
-                      <a href="shorts.html" class="card__link">Adidas Cloudfoam Trainers</a>
-                      <span class="card__price">$60,00</span>
+                      <a href="shorts.html" class="card__link">
+                        <h6>Reebok Workout Shorts</h6>
+                      </a>
+                      <span class="card__price">$25,00</span>
                       <input type="submit" value="Add to Cart">
                   </article>
                   <article class="sale__card">
                       <a href="shoes.html">
                           <img class="card__img" style="width: 283px" src="img/mid-season-sale/sale-shoes.png" alt="shoes">
                       </a>
-                      <a href="shoes.html" class="card__link">Adidas Cloudfoam Trainers</a>
+                      <a href="shoes.html" class="card__link">
+                        <h6>Puma Fitness Shoes in Grey</h6>
+                      </a>
                       <span class="card__price">$60,00</span>
                       <input type="submit" value="Add to Cart">
                   </article>
@@ -115,16 +121,20 @@
                       <a href="top.html">
                           <img class="card__img" style="width: 283px" src="img/mid-season-sale/sale-top.png" alt="top">
                       </a>
-                      <a href="top.html" class="card__link">Adidas Cloudfoam Trainers</a>
-                      <span class="card__price">$60,00</span>
+                      <a href="top.html" class="card__link">
+                        <h6>Puma Essential Tank Top</h6>
+                      </a>
+                      <span class="card__price">$43,00</span>
                       <input type="submit" value="Add to Cart">
                   </article>
                   <article class="sale__card card__media1 card__media2">
                       <a href="t-shirt.html">
                           <img class="card__img" style="width: 283px" src="img/mid-season-sale/sale-t-shirt.png" alt="t-shirt">
                       </a>
-                      <a href="t-shirt.html" class="card__link">Adidas Cloudfoam Trainers</a>
-                      <span class="card__price">$60,00</span>
+                      <a href="t-shirt.html" class="card__link">
+                        <h6>Nike Classic Polo T-Shirt</h6>
+                      </a>
+                      <span class="card__price">$23,00</span>
                       <input type="submit" value="Add to Cart">
                   </article>
               </div>
