--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
         <!-- Start of MidSeasonSale Olga Bondarenko-->
         <section class="sale">
           <div class="base__container">
-              <h2 class="sale__h2">mid-season sale <span class="sale__span">.</span></h2>
-              <div class="sale__separator"></div>
+              <h2 class="base__h2">mid-season sale <span class="sale__span">.</span></h2>
+              <div class="base__separator"></div>
               <p class="sale__subheader">Shop clothes and trainers that are chosen by thousands of our clients. Click on the
                   image to see the product details and click Add to Cart to make the purchase. We are committed to give you the
                   best buying experience!
