Free Shipping SVG added

--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
     <HR>
 		<!-- Start of AboutUs Олександр ALEKS code -->
 	<section id="about" class="about">
-		<div class="about__side"><img src="img/men.jpg" alt="Men aside" width="50%"></div>
+		<div class="about__side"><img src="img/men.jpg" alt="Men aside" style="width:50%"></div>
 		<div class="about__description" style="background-color: #000000">
 			<H2 style="color: #FFFFFF;">About us.</H2>
-			<hr width="20%" align="left" color="#FF0000">
-			<H5 style="color: #FFFFFF;">Workout is an American fitness store created by fitness geeks for those who love sport and try to keep fit.</H5>
+			<hr color="#FF0000" width="20%" align="left">
+			<H5 style="color: #FFFFFF;">Workou is an American fitness store created by fitness geeks for those who love sport and try to keep fit.</H5>
 			<P style="color: #FFFFFF;">At Workout, we know that great results do not come from standing still. We all need to move, push boundaries, and achieve better results every day. The mission of our shop is to support you in this.</P>
 			<P style="color: #FFFFFF;">We're sure that everyday fitness can change your lives and bodies forever. And we keep selling comfortable and high-tech clothes and shoes for your outstanding results.</P>
 			<div>
