--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 					<h3 class="location__h3">Affable Croatian Isles</h3>
 					<div class="location__months">JUN | JUL | AUG | SEP</div>
 				</article>
-			</div>
+			</div>@import url(https://fonts.googleapis.com/css?family=PT+Sans:regular,italic,700,700italic);
 		</section>
 		<!-- End of WhyChoseUs+AboutUs -->
 
@@ -88,18 +88,19 @@
 		<section id="#collection" class="main-collection">
 			<div class="main-collection__about __conteiner ">
 				<div class="main-collection__title text">
-					<h2 class="text__title">main COLLECTION.</h2>
+					<h2 class="text__title">main COLLECTION</h2>
+					<div class="text__line"></div>
 					<p class="text__subtitle">Shop our main fitness collection for men and women represented by the famous
 						brands.</p>
 				</div>
 				<div class="main-collection__block shop">
-					<div class="shop__menu">
+					<nav class="shop__menu">
 						<ul class="shop__list">
 							<li><a class="shop__link" href="#">Women</a></li>
 							<li><a class="shop__link" href="#">Men</a></li>
 							<li><a class="shop__link" href="#">Shoes</a></li>
 						</ul>
-					</div>
+					</nav>
 					<div class="shop__items">
 						<div class="shop__item-women">
 							<div class="card">
