--- a/index.html
+++ b/index.html
@@ -211,7 +211,9 @@
 		<!-- End of Discounr -->
 
 		<!-- Start of Main Collection Koval =======================================================================================================-->
+
 		<section id="#collection" class="main-collection" style="border: 2px solid red;">
+			@@include('html/_header.htm',{})
 			<div class="main-collection__about __conteiner ">
 				<div class="main-collection__title text">
 					<h2 class="text__title">main COLLECTION.</h2>
