Common css with fonts and colors added. Icon css added

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/main.css">
 	<title>Sport Clothes Store</title>
-	<script src="https://kit.fontawesome.com/5572bfa699.js" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="css/index.css">
+    <link rel="shortcut icon" href="img/icon.svg" type="image/x-icon">
 </head>
 
 <body>
