--- a/index.html
+++ b/index.html
@@ -213,10 +213,10 @@
 		<!-- Start of Main Collection Koval =======================================================================================================-->
 
 		<section id="#collection" class="main-collection" style="border: 2px solid red;">
-			@@include('html/_header.htm',{})
 			<div class="main-collection__about __conteiner ">
 				<div class="main-collection__title text">
 					<h2 class="text__title">main COLLECTION.</h2>
+					<div class="line"></div>
 					<p class="text__subtitle">Shop our main fitness collection for men and women represented by the famous
 						brands.</p>
 				</div>
