Some header css edited

--- a/index.html
+++ b/index.html
@@ -18,24 +18,24 @@
 			<div>
 				<H6>We’ve extended our returns period to 30 days.</H6>
 			</div>
-			<div><a href="mailto:workout@email.com">workout@email.com</a></div>
-			<div><a href="tel:12345678900">1-234-567-8900</a></div>
+			<div><a href="mailto:workout@email.com" class="header__contact">workout@email.com</a></div>
+			<div><a href="tel:12345678900" class="header__contact">+1 (234) 567 89 00</a></div>
 		</section>
 		<nav class="header__menu" style="background-color: #222323">
 			<img class="header__logo" width="168" src="img/logo.svg" alt="Shop Logo">
 			<div class="header__links">
-				<a class="link" href="#about">About us.</a>
-				<a class="link" href="#sale">Sale.</a>
-				<a class="link" href="#collection">Collection.</a>
-				<a class="link" href="blog.html">Blog.</a>
-				<a class="link" href="contacts.html">Contact us.</a>
+				<a class="header__link" href="#about">About us.</a>
+				<a class="header__link" href="#sale">Sale.</a>
+				<a class="header__link" href="#collection">Collection.</a>
+				<a class="header__link" href="blog.html">Blog.</a>
+				<a class="header__link" href="contacts.html">Contact us.</a>
 			</div>
 			<div>
-				<a href="https://facebook.com"><img src="img/facebook.svg" width="31" style="background-color: #FFFFFF"
+				<a class="header__social" href="https://facebook.com"><img src="img/facebook.svg" width="31" style="background-color: #FFFFFF"
 						alt="Face Book"></a>
-				<a href="https://instagram.com"><img src="img/instagram.svg" width="31" style="background-color: #FFFFFF"
+				<a class="header__social" href="https://instagram.com"><img src="img/instagram.svg" width="31" style="background-color: #FFFFFF"
 						alt="Instagram"></a>
-				<a href="https://youtube.com"><img src="img/youtube.svg" width="31" style="background-color: #FFFFFF"
+				<a class="header__social" href="https://youtube.com"><img src="img/youtube.svg" width="31" style="background-color: #FFFFFF"
 						alt="Youtube"></a>
 			</div>
 		</nav>
