--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<a class="header__link" href="#sale">Sale.</a>
 				<a class="header__link" href="#collection">Collection.</a>
 				<a class="header__link" href="blog.html">Blog.</a>
-				<a class="header__link" href="contacts.html">Contact us.</a>
+				<a class="header__link" href="#contact-us">Contact us.</a>
 			</div>
 			<div>
 				<a class="header__social" href="https://facebook.com"><img src="img/facebook.svg" width="31" style="background-color: #FFFFFF"
@@ -140,7 +140,7 @@
 
 		<HR>
 		<!-- Start of MidSeasonSale Olga Bondarenko-->
-		<section class="sale">
+		<section id="sale" class="sale">
 			<div class="base__container">
 				<h2 class="base__h2">mid-season sale <span class="sale__span">.</span></h2>
 				<div class="base__separator"></div>
@@ -211,7 +211,7 @@
 		<!-- End of Discounr -->
 
 		<!-- Start of Main Collection Koval =======================================================================================================-->
-		<section id="#collection" class="main-collection" style="border: 2px solid red;">
+		<section id="collection" class="main-collection" style="border: 2px solid red;">
 			<div class="main-collection__about __conteiner ">
 				<div class="main-collection__title text">
 					<h2 class="text__title">main COLLECTION.</h2>
@@ -363,7 +363,7 @@
 			</div>
 
 			<!--third section of footer comntainer-->
-			<div class="footer__container__bottom">
+			<div id="contact-us" class="footer__container__bottom">
 				<p class="footer__container__bottom__text">
 					© Created by
 				</p>
