Header classes edited

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
 	<header class="header">
-		<section class="header__contacts" style="background-color: #d60307">
+		<section class="header__contacts">
 			<div>
 				<H6>We’ve extended our returns period to 30 days.</H6>
 			</div>
@@ -39,21 +39,14 @@
 						alt="Youtube"></a>
 			</div>
 		</nav>
-		<div class="header__niger" style="background-image: url('img/niger.webp')">
-			<br>
-			<br>
-			<br>
-			<h4 class="header__aspire">ASPIRE TO MORE</h4>
-			<h1 class="header__new">new collections by top brands.</h1>
-			<br>
-			<br>
-			<br>
+		<div class="header__niger">
+			<h4>ASPIRE TO MORE</h4>
+			<h1>new <font class="header__h1-red">collections</font> by top brands<font class="header__h1-red">.</font></h1>
 			<a href="#collection" class="header__link button">Shop Now ⮕</a>
 		</div>
 	</header>
 
 	<!-- End of Олександр ALEKS code -->
-	<HR>
 
 	<main>
 		<!-- Start of WhyChoseUs -->
