About us classes applied

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 				<a class="header__link" href="#contact-us">Contact us.</a>
 			</div>
 			<div>
-				<a class="header__social" href="https://facebook.com"><img src="img/facebook.svg" width="31" style="background-color: #FFFFFF"
+				<a class="header__social" href="https://facebook.com"><img src="img/facebook.svg" width="30" style="background-color: #FFFFFF"
 						alt="Face Book"></a>
-				<a class="header__social" href="https://instagram.com"><img src="img/instagram.svg" width="31" style="background-color: #FFFFFF"
+				<a class="header__social" href="https://instagram.com"><img src="img/instagram.svg" width="30" style="background-color: #FFFFFF"
 						alt="Instagram"></a>
-				<a class="header__social" href="https://youtube.com"><img src="img/youtube.svg" width="31" style="background-color: #FFFFFF"
+				<a class="header__social" href="https://youtube.com"><img src="img/youtube.svg" width="30" style="background-color: #FFFFFF"
 						alt="Youtube"></a>
 			</div>
 		</nav>
@@ -109,22 +109,22 @@
 		<!-- Start of AboutUs Олександр ALEKS code -->
 		<section id="about" class="about">
 			<div class="about__side"><img src="img/men.jpg" alt="Men aside" style="width:50%"></div>
-			<div class="about__description" style="background-color: #000000">
-				<H2 style="color: #FFFFFF;">About us.</H2>
-				<hr color="#FF0000" width="20%" align="left">
-				<H5 style="color: #FFFFFF;">Workou is an American fitness store created by fitness geeks for those who love
+			<div class="about__description">
+				<H2 class="about__h2">About us<font class="about__h2-red">.</font></H2>
+				<div class="about__divider"></div>
+				<H5 class="about__h5">Workout is an American fitness store created by fitness geeks for those who love
 					sport and try to keep fit.</H5>
-				<P style="color: #FFFFFF;">At Workout, we know that great results do not come from standing still. We all
+				<P class="about__p">At Workout, we know that great results do not come from standing still. We all
 					need to move, push boundaries, and achieve better results every day. The mission of our shop is to
 					support you in this.</P>
-				<P style="color: #FFFFFF;">We're sure that everyday fitness can change your lives and bodies forever. And we
+				<P class="about__p">We're sure that everyday fitness can change your lives and bodies forever. And we
 					keep selling comfortable and high-tech clothes and shoes for your outstanding results.</P>
 				<div>
-					<a href="https://facebook.com"><img src="img/facebook.svg" width="31" style="background-color: #d60307"
+					<a href="https://facebook.com"><img src="img/facebook.svg" width="30" style="background-color: #d60307"
 							alt="Face Book"></a>
-					<a href="https://instagram.com"><img src="img/instagram.svg" width="31" style="background-color: #d60307"
+					<a href="https://instagram.com"><img src="img/instagram.svg" width="30" style="background-color: #d60307"
 							alt="Instagram"></a>
-					<a href="https://youtube.com"><img src="img/youtube.svg" width="31" style="background-color: #d60307"
+					<a href="https://youtube.com"><img src="img/youtube.svg" width="30" style="background-color: #d60307"
 							alt="Youtube"></a>
 				</div>
 			</div>
