--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
 		</section>
 		<!-- End of Main Collection Koval==============================================================================================================================-->
 
-		<!-- Start of Deal of the month -->
-		<!-- End of Deal of the month -->
+		<!-- Start of Deal of the month Vitalii Nadych-->
+		<!-- End of Deal of the month Vitalii Nadych-->
 
 		<!-- Start of New Arrivals -->
 		<!-- End of New Arrivals -->
