--- a/index.html
+++ b/index.html
@@ -31,18 +31,15 @@
 				<a class="header__link" href="#contact-us">Contact us.</a>
 			</div>
 			<div>
-				<a class="header__social" href="https://facebook.com"><img src="img/facebook.svg" width="30" style="background-color: #FFFFFF"
-						alt="Face Book"></a>
-				<a class="header__social" href="https://instagram.com"><img src="img/instagram.svg" width="30" style="background-color: #FFFFFF"
-						alt="Instagram"></a>
-				<a class="header__social" href="https://youtube.com"><img src="img/youtube.svg" width="30" style="background-color: #FFFFFF"
-						alt="Youtube"></a>
+				<a href="https://facebook.com"><img class="header__social" src="img/facebook.svg" width="30" alt="Face Book"></a>
+				<a href="https://instagram.com"><img class="header__social" src="img/instagram.svg" width="30" alt="Instagram"></a>
+				<a href="https://youtube.com"><img class="header__social" src="img/youtube.svg" width="30" alt="Youtube"></a>
 			</div>
 		</nav>
 		<div class="header__niger">
 			<h4>ASPIRE TO MORE</h4>
-			<h1>new <font class="header__h1-red">collections</font> by top brands<font class="header__h1-red">.</font></h1>
-			<a href="#collection" class="header__link button">Shop Now ⮕</a>
+			<h1>new <mark class="header__h1-red">collections</mark> by top brands<mark class="header__h1-red">.</mark></h1>
+			<a href="#collection" class="header__link-button">Shop Now ⮕</a>
 		</div>
 	</header>
 
@@ -89,28 +86,11 @@
 		</section>
 		<!-- End of WhyChoseUs -->
 
-		<section class="sea">
-			<h2 class="sea__h2">
-				Sea the World
-			</h2>
-			<p class="sea__subheader">
-				Join our yacht trips to the most outstanding places of the world
-			</p>
-			<div class="sea__locations">
-				<article class="location">
-					<img class="location__image" src="img/location-sea.jpg" "Sea">
-					<h3 class="location__h3">Affable Croatian Isles</h3>
-					<div class="location__months">JUN | JUL | AUG | SEP</div>
-				</article>
-			</div>@import url(https://fonts.googleapis.com/css?family=PT+Sans:regular,italic,700,700italic);
-		</section>
-		<!-- End of WhyChoseUs+AboutUs -->
-		<HR>
 		<!-- Start of AboutUs Олександр ALEKS code -->
 		<section id="about" class="about">
 			<div class="about__side"><img src="img/men.jpg" alt="Men aside" style="width:50%"></div>
 			<div class="about__description">
-				<H2 class="about__h2">About us<font class="about__h2-red">.</font></H2>
+				<H2 class="about__h2">About us<mark class="about__h2-red">.</mark></H2>
 				<div class="about__divider"></div>
 				<H5 class="about__h5">Workout is an American fitness store created by fitness geeks for those who love
 					sport and try to keep fit.</H5>
@@ -120,12 +100,9 @@
 				<P class="about__p">We're sure that everyday fitness can change your lives and bodies forever. And we
 					keep selling comfortable and high-tech clothes and shoes for your outstanding results.</P>
 				<div>
-					<a href="https://facebook.com"><img src="img/facebook.svg" width="30" style="background-color: #d60307"
-							alt="Face Book"></a>
-					<a href="https://instagram.com"><img src="img/instagram.svg" width="30" style="background-color: #d60307"
-							alt="Instagram"></a>
-					<a href="https://youtube.com"><img src="img/youtube.svg" width="30" style="background-color: #d60307"
-							alt="Youtube"></a>
+					<a href="https://facebook.com"><img class="about__social" src="img/facebook.svg" width="30" alt="Face Book"></a>
+					<a href="https://instagram.com"><img class="about__social" src="img/instagram.svg" width="30" alt="Instagram"></a>
+					<a href="https://youtube.com"><img class="about__social" src="img/youtube.svg" width="30" alt="Youtube"></a>
 				</div>
 			</div>
 		</section>
