--- a/index.html
+++ b/index.html
@@ -31,17 +31,18 @@
 				<a class="header__link" href="#contact-us">Contact us.</a>
 			</div>
 			<div>
-				<a class="header__social" href="https://facebook.com"><img src="img/facebook.svg" width="31" style="background-color: #FFFFFF"
-						alt="Face Book"></a>
-				<a class="header__social" href="https://instagram.com"><img src="img/instagram.svg" width="31" style="background-color: #FFFFFF"
-						alt="Instagram"></a>
-				<a class="header__social" href="https://youtube.com"><img src="img/youtube.svg" width="31" style="background-color: #FFFFFF"
-						alt="Youtube"></a>
+				<a class="header__social" href="https://facebook.com"><img src="img/facebook.svg" width="31"
+						style="background-color: #FFFFFF" alt="Face Book"></a>
+				<a class="header__social" href="https://instagram.com"><img src="img/instagram.svg" width="31"
+						style="background-color: #FFFFFF" alt="Instagram"></a>
+				<a class="header__social" href="https://youtube.com"><img src="img/youtube.svg" width="31"
+						style="background-color: #FFFFFF" alt="Youtube"></a>
 			</div>
 		</nav>
 		<div class="header__niger">
 			<h4>ASPIRE TO MORE</h4>
-			<h1>new <font class="header__h1-red">collections</font> by top brands<font class="header__h1-red">.</font></h1>
+			<h1>new <font class="header__h1-red">collections</font> by top brands<font class="header__h1-red">.</font>
+			</h1>
 			<a href="#collection" class="header__link button">Shop Now ⮕</a>
 		</div>
 	</header>
@@ -204,12 +205,8 @@
 		<!-- End of Discounr -->
 
 		<!-- Start of Main Collection Koval =======================================================================================================-->
-<<<<<<< HEAD
 
 		<section id="#collection" class="main-collection" style="border: 2px solid red;">
-=======
-		<section id="collection" class="main-collection" style="border: 2px solid red;">
->>>>>>> c03392e30f160b41bb26a0428da3e428486bb595
 			<div class="main-collection__about __conteiner ">
 				<div class="main-collection__title text">
 					<h2 class="text__title">main COLLECTION.</h2>
