Header h6 class corrected

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<header class="header">
 		<section class="header__contacts">
 			<div>
-				<H6>We’ve extended our returns period to 30 days.</H6>
+				<h6 class="header__h6">We’ve extended our returns period to 30 days.</h6>
 			</div>
 			<div><a href="mailto:workout@email.com" class="header__contact">workout@email.com</a></div>
 			<div><a href="tel:12345678900" class="header__contact">+1 (234) 567 89 00</a></div>
